# agent-graphql-api

./: .env.example  README.md  pyproject.toml
scripts/: dev.sh
src/app/: config.py  main.py
src/app/domain/: models.py  repositories.py
src/app/infra/: db.py  repositories_pg.py
src/app/interface/: graphql_schema.py
src/app/services/: memory_service.py
src/sql/: schema.sql
tests/: test_assistant_prompt.py
